#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([GefConsole], [0.A], [fege.guillaume@gmail.com])
AC_LANG(C)
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])


AM_INIT_AUTOMAKE

# Checks for programs.
#AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

AM_PROG_CC_C_O

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Install dir
#prefix=$PWD/linux

AC_CONFIG_FILES([Makefile
src/GefConsole/Makefile
samples/Makefile
samples/OpenGL/Makefile
])

AC_OUTPUT
